# nxt-ros-pkg

./: .gitignore
nxt_navigation/: stack.xml
nxt_navigation/nxt_localization/: CMakeLists.txt  mainpage.dox  manifest.xml
nxt_navigation/nxt_localization/common/include/: nxt.h
nxt_navigation/nxt_localization/common/src/: nxt.cpp
nxt_navigation/nxt_localization/common/test/: bluetooth_connection.cpp
nxt_navigation/nxt_localization/ros/cfg/: markers.cfg
nxt_navigation/nxt_localization/ros/include/: ar_kinect_bluetooth.h
nxt_navigation/nxt_localization/ros/launch/: localization.launch
nxt_navigation/nxt_localization/ros/src/: ar_kinect_bluetooth.cpp  ar_object.cpp
